<resources>
    <string name="app_name">NotesPassword</string>
    <string name="hm_lmg">Logo</string>
    <string name="hm_welcome">Welcome !</string>
    <string name="btn_login">Login</string>
    <string name="bt_register_txt">Register</string>
    <string name="skip_txt">Skip</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or_with">Or with</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_password">Create password</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="upload_photo">SignUp</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="not_user">Not user</string>
    <string name="forget_password">Forget password</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="don_t_worry_be_are_here">Don\'t worry be are here</string>
    <string name="logout">Logout</string>
</resources>