<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Activity">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/visibility_signup"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:outlineAmbientShadowColor="@color/light_green"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="30dp"
                android:padding="20dp"
                android:layout_gravity="center">


                <TextView
                    android:id="@+id/upload_img_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="30sp">

                </TextView>

                <View
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:background="#000000"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp">

                </View>

                <EditText
                    android:id="@+id/txt_email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/txt_border"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_your_email_id"
                    android:padding="12dp"
                    android:layout_marginBottom="20dp"/>

                <EditText
                    android:id="@+id/txt_password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/txt_border"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/create_password"
                    android:padding="12dp"
                    android:layout_marginBottom="20dp" />

                <EditText
                    android:id="@+id/txt_confirm_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/txt_border"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:hint="@string/confirm_password"
                    android:layout_marginBottom="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_submit_signup"
                    android:background="@drawable/btn_grad"
                    android:text="@string/submit"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    android:textSize="16sp">

                </Button>





                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_for_login_signup"
                    android:text="@string/already_have_account_login"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_marginBottom="40dp"/>



            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>