<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#834C4949">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_signup"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/lock"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="#3C3F3D"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/hm_welcome"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_grad"
            android:text="@string/btn_login"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_register_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_grad"
            android:text="@string/bt_register_txt"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/txt_skip_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/skip_txt"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="5dp">

        </TextView>

    </LinearLayout>

</RelativeLayout>