<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/visibility_login"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="30dp"
                android:padding="30dp"
                android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_signup"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/lock"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="#ffffff"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>

                <EditText
                    android:id="@+id/txt_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/txt_border"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_your_email_id"
                    android:padding="12dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/txt_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/txt_border"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/enter_your_password"
                    android:padding="12dp"
                    android:layout_marginBottom="20dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_login_login"
                    android:background="@drawable/btn_grad"
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp">

                </Button>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/forget_password_login"
                    android:text="@string/forget_password"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_for_signup_login"
                    android:text="@string/not_user"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>



            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>