<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forget_password_Activity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/visibility_forget_password"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:outlineAmbientShadowColor="#12EF1B"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textColor="@color/light_green"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="cursive"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_worry_be_are_here"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="text"
                android:hint="@string/enter_email_id"
                android:id="@+id/txt_email_forget_password"
                android:background="@drawable/txt_border"
                android:padding="15dp"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:id="@+id/btn_forget_password"
                android:background="@drawable/btn_grad"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>